--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,144 @@ body {
 }
 
 h1 {
-	font-family: fanatsy;
-	
+	font-family: Brush Script MT, Brush Script Std, cursive;
+	font-size:50px;
+	color:white;
+	text-align:center;
+}
+
+img {
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+	width:40%;
+	border:4px solid #f06c0e;
+}
+
+p {
+   font-family: Blippo, fantasy;
+   font-size:25px;
+   color:white;
+   background:#9c5252;
+   border:4px solid #fca4f8;
+   margin-bottom:20px;
+   margin-left:5%;
+   margin-right:5%;
+   margin-top:20px;
+}
+
+#in-email {
+   font-family: Blippo, fantasy;
+   font-size:15px;
+   color:white;
+   background:#9c5252;
+   border:4px solid #eec07b;
+   margin-bottom:20px;
+   margin-left:1%;
+   margin-right:1%;
+   margin-top:20px;
+}
+#submit {
+   font-family: Blippo, fantasy;
+   font-size:15px;
+   color:white;
+   background:#9c5252;
+   border:4px solid #eec07b;
+   margin-bottom:20px;
+   margin-left:1%;
+   margin-right:1%;
+   margin-top:20px;
+}
+#fName {
+   font-family: Blippo, fantasy;
+   font-size:15px;
+   color:white;
+   background:#9c5252;
+   border:4px solid #cad8a4;
+   margin-bottom:20px;
+   margin-left:1%;
+   margin-right:1%;
+   margin-top:20px;
+}
+#phoneNum {
+   font-family: Blippo, fantasy;
+   font-size:15px;
+   color:white;
+   background:#9c5252;
+   border:4px solid #422308;
+   margin-bottom:20px;
+   margin-left:1%;
+   margin-right:1%;
+   margin-top:20px;
+}
+#verAge {
+   font-family: Blippo, fantasy;
+   font-size:15px;
+   color:white;
+   background:#9c5252;
+   border:4px solid #ffa600;
+   margin-bottom:20px;
+   margin-left:1%;
+   margin-right:1%;
+   margin-top:20px;
+}
+#signup {
+  background-color:#9c5252;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 80px;
+  box-shadow: 20px 20px 20px 10px rgb(126, 62, 62);
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 70vh;
+}
+
+
+
+@media (min-width: 768px) {
+  body {
+    text-align: center;
+  }  
+
+  h1{
+    font-size:30px;
+    width:auto;
+    padding: 20px;
+  }
+
+  p {
+    font-size:15px;
+    margin-top:10px;   
+  }
+
+  form {
+    max-width:600px;
+    margin:0;
+    display: flex;  
+  }
+}
+  
+@media (min-width: 1024px) {
+  body {
+    text-align: center;
+  }
+
+
+  h1 {
+    font-size:40px;
+    width: 100%;
+    padding:20px;
+  }
+
+  p {
+    font-size:20px;  
+    margin-top:10px;   
+  }
+
+  form {
+    max-width:900px;
+    margin:0;
+    display:flex;
+  }     
+}
