--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-	font-family: Brush Script MT, Brush Script Std, cursive;
+	font-family:Brush Script MT, Brush Script Std, cursive;
 	font-size:50px;
 	color:white;
 	text-align:center;
@@ -19,7 +19,7 @@ img {
 }
 
 p {
-   font-family: Blippo, fantasy;
+   font-family:Blippo, fantasy;
    font-size:25px;
    color:white;
    background:#9c5252;
@@ -31,7 +31,7 @@ p {
 }
 
 #in-email {
-   font-family: Blippo, fantasy;
+   font-family:Blippo, fantasy;
    font-size:15px;
    color:white;
    background:#9c5252;
@@ -42,7 +42,7 @@ p {
    margin-top:20px;
 }
 #submit {
-   font-family: Blippo, fantasy;
+   font-family:Blippo, fantasy;
    font-size:15px;
    color:white;
    background:#9c5252;
@@ -53,7 +53,7 @@ p {
    margin-top:20px;
 }
 #fName {
-   font-family: Blippo, fantasy;
+   font-family:Blippo, fantasy;
    font-size:15px;
    color:white;
    background:#9c5252;
@@ -64,7 +64,7 @@ p {
    margin-top:20px;
 }
 #phoneNum {
-   font-family: Blippo, fantasy;
+   font-family:Blippo, fantasy;
    font-size:15px;
    color:white;
    background:#9c5252;
@@ -75,7 +75,7 @@ p {
    margin-top:20px;
 }
 #verAge {
-   font-family: Blippo, fantasy;
+   font-family:Blippo, fantasy;
    font-size:15px;
    color:white;
    background:#9c5252;
@@ -92,56 +92,33 @@ p {
   margin: 80px;
   box-shadow: 20px 20px 20px 10px rgb(126, 62, 62);
   display: flex;
-  justify-content: center; 
-  align-items: center; 
-  height: 70vh;
+  justify-content:center; 
+  align-items:center; 
+  height:70vh;
 }
 
 
 
 @media (min-width: 768px) {
-  body {
-    text-align: center;
-  }  
-
-  h1{
-    font-size:30px;
-    width:auto;
-    padding: 20px;
-  }
-
-  p {
-    font-size:15px;
-    margin-top:10px;   
-  }
-
-  form {
-    max-width:600px;
-    margin:0;
-    display: flex;  
-  }
+#page {
+	width:90%;
+	height:90%;
 }
-  
+  img{
+	width:20%;
+	height:auto;
+}
+  p {
+	width: fit-content;
+  }
 @media (min-width: 1024px) {
-  body {
-    text-align: center;
-  }
-
-
-  h1 {
-    font-size:40px;
-    width: 100%;
-    padding:20px;
-  }
-
-  p {
-    font-size:20px;  
-    margin-top:10px;   
-  }
-
-  form {
-    max-width:900px;
-    margin:0;
-    display:flex;
-  }     
+#page {
+	width:90%;
+	height:90%;
 }
+  img{
+	  width:40%;
+	  height:auto;
+}
+p {
+	width: fit-content;
