Added slight style & tinkering
Js has a specific error, trying to identify where it appears, testing to make the dimensions slightly better on mobile phones as the colors go off the screen or get cut in half.

--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,15 @@ p {
   align-items:center; 
   height:70vh;
 }
-
-
+#page {
+	margin: 0 3% 0 3%;
+	padding: 2% 2% 2% 2%;
+	border-style:solid;
+	border-color:rgb(255, 153, 51);
+	background-color:#702c30;
+	border-width:5px;
+	
+}
 
 @media (min-width: 768px) {
 #page {
